# FluidFoam

./: CMakeLists.txt  README.md  instructions.md  readme.md  test.txt
FoamGenerator/: CMakeLists.txt  FoamGeneratorNode.cpp
PartioEmitter/: CMakeLists.txt
PartioEmitter/lib/: partio.lib
PartioEmitter/src/: LSystem.cpp  PartioPlugin.C  PartioPlugin.h
SPlisHSPlasH/: Simulation.h
Simulator/: ExporterRegistration.cpp  SimulatorBase.cpp  SimulatorBase.h
Simulator/Exporter/: ExporterBase.h  ParticleExporter_Partio.cpp  ParticleExporter_Partio.h  ParticleExporter_VTK.cpp  ParticleExporter_VTK.h  RigidBodyExporter_BIN.cpp  RigidBodyExporter_BIN.h  RigidBodyExporter_OBJ.cpp  RigidBodyExporter_OBJ.h  RigidBodyExporter_PLY.cpp  RigidBodyExporter_PLY.h  RigidBodyExporter_VTK.cpp  RigidBodyExporter_VTK.h
Utilities/: Version.h
houdiniPlugin/: CMakeLists.txt
houdiniPlugin/lib/Debug/: glew_d.lib  zlib_d.lib
houdiniPlugin/lib/Release/: glew.lib  partio.lib
houdiniPlugin/scripts/: simNode.py
houdiniPlugin/src/: PluginMain.c  PluginMain.h
lib/: zlib.lib
src/: FluidConfiguration.cpp  FluidConfiguration.h  FluidSimulator.cpp  FluidSimulator.h  FoamGenerationMain.cpp  FoamGenerationMain.h  FoamGenerator.cpp  FoamGenerator.h  FoamGeneratorNode.cpp  FoamGeneratorNode.h  Plugin.C  Plugin.h  RigidBody.cpp  RigidBody.h  Simulator.cpp  Simulator.h  Visualizer.cpp  Visualizer.h
